ingress.yaml
# Author      : Luis Merino Troncoso
# Date        : 20/06/2021
# Description : Certified Kubernetes Administrator Labs ( CNCF )
#               Ingress Controller - Ingress rules 
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: default
spec:
  rules:
  - host: www.external.com
    http:
      paths:
      - backend:
          service:
            name: web-one
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
